# ftdi-sample-rs

./: Cargo.toml
examples/: ftdi-hal.rs  libftd2xx-hal.rs
