[package]
name = "cargo-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ftdi-embedded-hal = { version = "0.16.0", features = [
    "libftd2xx",
    "libftd2xx-static",
] }
eh0 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
libftd2xx = { version = "0.32.2", features = ["static"] }
ftdi = "0.1.3"
